# drone-tracking

./: README.md  links.txt
UI-Client/: CrazyflieControl.py  PCPC.py
UI-Client/SimulatorCode/: Colors.py  SysInfo.py  TTY.py  TextElements.py
UI-Client/Telemetry/cflib/drivers/: crazyradio.py
color-tracking-demo/: CMakeLists.txt  README.md  color-tracking-demo.cpp
drone-control/: CMakeLists.txt  README.md
drone-control-python/: LICENSE.txt
drone-control-python/examples/: ControlDrone.py  SysInfo.py  UserInput.py  basiclog.py  ramp.py
drone-control-python/lib/cfclient/configs/input/: Joystick.json
drone-control-python/win32install/: cfclient.nsi.tmpl  readme.txt
drone-control/src/demo/: demo.cpp
links/: bvh-file-format.txt  camera-reviews.txt  links.txt
matlab-tracking/: RGB_Detection_and_Tracking.m
radio-gps/: Setup raspberry Pi.docx
radio-gps/Receiver/: Receiver.ino
radio-gps/Sender/Sender/: Sender.ino
radio-gps/antenna/: cpp_basis.cpp  socket.cpp  socket.h
